# contain

./: Cargo.toml  README.md  flake.nix
nix/: default.nix  packages.nix
nix/cloud-hypervisor-graphics/: default.nix
nix/crosvm-gpu-only/: default.nix
nix/dev/: default.nix
nix/modules/: default.nix
nix/modules/guest/: default.nix
nix/modules/host/: default.nix
nix/pkgs/: default.nix
nix/pkgs/cloud-hypervisor-graphics/: 0001-build-use-local-vhost.patch  0002-virtio-devices-add-a-GPU-device.patch  default.nix
nix/pkgs/cloud-hypervisor-graphics/vhost/: 0001-vhost_user-add-get_size-to-MsgHeader.patch  0002-vhost-fix-receiving-reply-payloads.patch  0003-vhost_user-add-shared-memory-region-support.patch  0004-vhost_user-add-protocol-flag-for-shmem.patch
nix/pkgs/crosvm-gpu-only/: default.nix
nix/pkgs/virtiofsd/: default.nix
src/: lib.rs  run.rs
src/client/: mod.rs
src/config/: mod.rs
src/config/console/: mod.rs
src/config/cpu/: mod.rs
src/config/filesystem/: mod.rs
src/config/graphics/: mod.rs
src/config/memory/: mod.rs
src/config/network/: mod.rs
src/daemon/: api.rs  mod.rs  requests.rs
