[package]
name = "contain"
version = "0.1.0"
edition = "2021"

[lib]

[[bin]]
name = "contain"

[[bin]]
name = "containd"

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "2"
rand = "0.9"
hex = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
signal-hook = "0.3"
shared_child = "1"
http-body-util = "0.1"
http = "1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
hyperlocal = "0.9"
axum = "0.8"
qcow2-rs = "0.1"
dirs = "6.0.0"
config = "0.15.11"
